--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 # Ariel-Camacho-site-arincon
 <html>
  <head>
-   Ariel Camacho y Los Plebes del Rancho | Store 
+   Ariel Camacho y Los Plebes del Rancho | About 
    <meta name= "description" content="Ariel Camacho fan site">
  </head> 
  <body>
