--- a/store.html
+++ b/store.html
@@ -16,21 +16,13 @@
      <hr>
      <hl>Ariel Camacho y Los Plebes del Rancho</hl>
    </header>
-
-  <section>
+ <section>
     <h2>Music</h2>
     <div>
-    </div>
+    <div>
     <strong>Album 1</strong>
-  </section>
-   
-   <footer>
-     <h3>Ariel Camacho Y los Plebes del Rancho</h3>
-     <u1>
-       <li><img src="https://i.scdn.co/image/ab67616d0000b273eba766e9ba27b04b9aa5dd38"></li>
-       <li><img src="https://i.ytimg.com/vi/MlNjooBsxrU/maxresdefault.jpg"></li>
-     </u1>
-   </footer>
- </body>
-</html>
-
+    </div>
+    <img src="https://i.ytimg.com/vi/MlNjooBsxrU/maxresdefault.jpg">
+    <div>
+     <span>$12.99</span>
+     <button type=
