--- a/store.html
+++ b/store.html
@@ -26,4 +26,14 @@
     <img src="https://i.ytimg.com/vi/MlNjooBsxrU/maxresdefault.jpg">
     <div>
      <span>$12.99</span>
-     <button type=
+     <button type="button">ADD TO CART</button</button>
+
+     <footer>
+      <h3>Ariel Camacho Y Los Plebes del Rancho</h3>
+      <ul>
+       <li>
+        <a href=https://www.spotify.com" target="_blank">
+         <img src="images/Spotify Logo.png">
+       </li>
+      </ul>
+     </footer>
