--- a/store.html
+++ b/store.html
@@ -1,11 +1,10 @@
-# Ariel-Camacho-site-arincon
 <html>
  <head>
    Ariel Camacho y Los Plebes del Rancho | Store 
    <meta name= "description" content="Ariel Camacho fan site">
    <link rel="stylesheet" href="styles.css">
- </head> 
- <body>
+  </head> 
+   <body>
    <header>
      <nav>
        <ul>
@@ -23,17 +22,41 @@
     <div>
     <strong>Album 1</strong>
     </div>
-    <img src="https://i.ytimg.com/vi/MlNjooBsxrU/maxresdefault.jpg">
+    <img src="https://i5.walmartimages.com/seo/Hablemos-CD_3835e91e-3033-461d-a0eb-43edf36aba49.73a370a1e8b69d0e12030a2766236e44.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF">
     <div>
      <span>$12.99</span>
      <button type="button">ADD TO CART</button</button>
+    </div>
+    </div>
+    <div>
+      <div>
+        </section>
+        <section>
+          <h2>MERCH</h2>
+          <div>
+            <div>
+              <strong>T Shirt</strong>
+              </div>
+              <img src="Images/SHirt.png"
+        </section>
 
      <footer>
       <h3>Ariel Camacho Y Los Plebes del Rancho</h3>
       <ul>
        <li>
-        <a href=https://www.spotify.com" target="_blank">
-         <img src="images/Spotify Logo.png">
+        <a href="https://www.spotify.com" target="_blank">
+         <img src="https://cdn.icon-icons.com/icons2/2108/PNG/96/spotify_icon_130826.png">
+         </a>
+       </li>
+        <li>
+         <a href="https://www.facebook.com" target="_blank">
+         <img src= "https://cdn.icon-icons.com/icons2/2429/PNG/96/facebook_logo_icon_147291.png">
+         </a>
+         </li>
+        <li>
+         <a href= "https://www.youtube.com" target="_blank">
+          <img src= "https://cdn.icon-icons.com/icons2/836/PNG/96/Youtube_icon-icons.com_66802.png">
+         </a>
        </li>
       </ul>
      </footer>
