--- a/store.html
+++ b/store.html
@@ -4,7 +4,6 @@
    <meta name= "description" content="Ariel Camacho fan site">
    <link rel="stylesheet" href="styles.css">
   </head> 
-   <body>
    <header>
      <nav>
        <ul>
@@ -22,22 +21,37 @@
     <div>
     <strong>Album 1</strong>
     </div>
-    <img src="https://i5.walmartimages.com/seo/Hablemos-CD_3835e91e-3033-461d-a0eb-43edf36aba49.73a370a1e8b69d0e12030a2766236e44.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF">
+    <img src= "https://i5.walmartimages.com/seo/Hablemos-CD_3835e91e-3033-461d-a0eb-43edf36aba49.73a370a1e8b69d0e12030a2766236e44.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF">
     <div>
      <span>$12.99</span>
-     <button type="button">ADD TO CART</button</button>
+     <button type="button">ADD TO CART</button
+     </div>
+     <div>
+    <strong>Album 2</strong>
     </div>
+    <img src= "https://i.scdn.co/image/ab67616d0000b273eba766e9ba27b04b9aa5dd38">
+    <div>
+     <span>$12.99</span>
+     <button type="button">ADD TO CART</button
     </div>
     <div>
-      <div>
-        </section>
         <section>
           <h2>MERCH</h2>
           <div>
             <div>
               <strong>T Shirt</strong>
               </div>
-              <img src="Images/SHirt.png"
+              <img src="https://i.etsystatic.com/17448421/c/1495/1495/38/905/il/56f308/5553284691/il_600x600.5553284691_j5cz.jpg"/>
+              <div>
+            <div>
+              <strong>Mug</strong>
+              </div>
+              <img src="https://i.etsystatic.com/42953880/r/il/25e964/5007928985/il_600x600.5007928985_7oti.jpg"/>
+              <div>
+            <div>
+              <strong>Phone Case</strong>
+              </div>
+              <img src="https://ih1.redbubble.net/image.2795221132.9379/icr,iphone_16_tough,back,a,x600-pad,600x600,f8f8f8.jpg"/>
         </section>
 
      <footer>
